[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = image_tools
description = Formerly AG_image_tools, to eventually be superceded by astropy.imageutils
long_description = This is a package for imgae manipulation (FFTs, downsampling, etc)
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = image-tools.rtfd.org
edit_on_github = True
github_project = keflavich/image_tools
